--- a/try.ipynb
+++ b/try.ipynb
@@ -7,8 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#shit\n",
-    "#new line"
+    "#shoe\n",
+    "#new line\n",
+    "#try"
    ]
   }
  ],
